--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nuxt": "^3.6.5"
   },
   "dependencies": {
+    "event-emitter": "^0.3.5",
     "sass": "^1.66.1",
     "swiper": "^10.2.0"
   }
